--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@privy-io/react-auth": "^3.7.0",
     "@privy-io/wagmi": "^2.0.2",
+    "@solana-program/system": "^0.8.1",
     "@tanstack/react-query": "^5.90.10",
     "@vercel/analytics": "^1.5.0",
     "ethers": "^6.15.0",
